Day 02 build completed

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
           </h3>
           <h4><a class="button" href="01-birthday-reminder/build/" target="_blank"
         >Day 01</a></h4>
+          <h4><a class="button" href="02-tours/build/" target="_blank"
+        >Day 02</a></h4>
         </section>      
 </body>
 </html>
